Change the units

--- a/tutorial/black_body_pulsation.ipynb
+++ b/tutorial/black_body_pulsation.ipynb
@@ -19,7 +19,7 @@
     "from spice.models import IcosphereModel\n",
     "from spice.models.mesh_transform import add_rotation, evaluate_rotation, add_pulsation, evaluate_pulsations\n",
     "from spice.plots import plot_3D_mesh_and_spectrum\n",
-    "from spice.spectrum import simulate_spectrum\n",
+    "from spice.spectrum import simulate_observed_flux\n",
     "import astropy.units as u\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -310,7 +310,7 @@
     }
    },
    "cell_type": "code",
-   "source": "simulate_spectrum(bb.intensity, mps[0], jnp.log10(vws), disable_doppler_shift=False)",
+   "source": "simulate_observed_flux(bb.intensity, mps[0], jnp.log10(vws), disable_doppler_shift=False)",
    "outputs": [
     {
      "data": {
@@ -344,7 +344,7 @@
    },
    "source": [
     "vws = jnp.linspace(100., 12000., 10)\n",
-    "specs = [simulate_spectrum(bb.intensity, mp0, jnp.log10(vws), disable_doppler_shift=False) for mp0 in mps[:2]]"
+    "specs = [simulate_observed_flux(bb.intensity, mp0, jnp.log10(vws), disable_doppler_shift=False) for mp0 in mps[:2]]"
    ],
    "outputs": [
     {
