Correct some property disrepancies between PHOEBE and SPICE

--- a/tutorial/phoebe.ipynb
+++ b/tutorial/phoebe.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-22T19:07:41.971792Z",
      "start_time": "2024-07-22T19:07:39.555981Z"
     }
    },
-   "source": [
-    "import phoebe\n",
-    "import numpy as np\n",
-    "from spice.models.phoebe_model import PhoebeModel\n",
-    "from spice.spectrum import simulate_spectrum\n",
-    "from transformer_payne import Blackbody\n",
-    "\n",
-    "import matplotlib\n",
-    "%matplotlib inline\n",
-    "\n",
-    "from phoebe.parameters.dataset import _mesh_columns"
-   ],
    "outputs": [
     {
      "name": "stderr",
@@ -39,7 +28,18 @@
      ]
     }
    ],
-   "execution_count": 1
+   "source": [
+    "import phoebe\n",
+    "import numpy as np\n",
+    "from spice.models.phoebe_model import PhoebeModel\n",
+    "from spice.spectrum import simulate_spectrum\n",
+    "from transformer_payne import Blackbody\n",
+    "\n",
+    "import matplotlib\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from phoebe.parameters.dataset import _mesh_columns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,22 +56,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-21T19:56:22.636331Z",
      "start_time": "2024-07-21T19:56:22.157674Z"
     }
    },
-   "source": [
-    "b = phoebe.default_star()\n",
-    "b.set_quantity('teff', 5780)\n",
-    "\n",
-    "times = np.linspace(0, 1, 10)\n",
-    "COLUMNS = _mesh_columns\n",
-    "\n",
-    "b.add_dataset('mesh', compute_times=times, columns=COLUMNS, dataset='mesh01')\n",
-    "b.run_compute(irrad_method='none', coordinates='uvw', overwrite=True)"
-   ],
    "outputs": [
     {
      "name": "stderr",
@@ -91,7 +82,16 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "source": [
+    "b = phoebe.default_star()\n",
+    "b.set_quantity('teff', 5780)\n",
+    "\n",
+    "times = np.linspace(0, 1, 10)\n",
+    "COLUMNS = _mesh_columns\n",
+    "\n",
+    "b.add_dataset('mesh', compute_times=times, columns=COLUMNS, dataset='mesh01')\n",
+    "b.run_compute(irrad_method='none', coordinates='uvw', overwrite=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,15 +102,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-21T19:56:25.320375Z",
      "start_time": "2024-07-21T19:56:25.256191Z"
     }
    },
-   "source": [
-    "b.get_parameter('distance')"
-   ],
    "outputs": [
     {
      "data": {
@@ -123,22 +121,24 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "source": [
+    "b.get_parameter('distance')"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-21T19:56:25.768738Z",
      "start_time": "2024-07-21T19:56:25.764820Z"
     }
    },
+   "outputs": [],
    "source": [
     "from spice.models.phoebe_utils import PhoebeConfig\n",
     "p = PhoebeConfig(b, 'mesh01')"
-   ],
-   "outputs": [],
-   "execution_count": 4
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,19 +151,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-21T19:56:28.835855Z",
      "start_time": "2024-07-21T19:56:28.800993Z"
     }
    },
+   "outputs": [],
    "source": [
     "bb = Blackbody()\n",
     "pm = PhoebeModel.construct(p, times[0], bb.parameter_names)\n",
     "pm2 = PhoebeModel.construct(p, times[5], bb.parameter_names)"
-   ],
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tp-env",
+   "display_name": "astro",
    "language": "python",
-   "name": "tp-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
