--- a/tutorial/phoebe_binary.ipynb
+++ b/tutorial/phoebe_binary.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:02:11.496562Z",
-     "start_time": "2024-09-15T17:02:11.489382Z"
+     "end_time": "2024-09-19T01:43:06.338866Z",
+     "start_time": "2024-09-19T01:42:49.720060Z"
     }
    },
    "source": [
@@ -22,8 +22,16 @@
     "config.update('jax_platform_name', 'cpu')\n",
     "config.update(\"jax_enable_x64\", False)"
    ],
-   "outputs": [],
-   "execution_count": 27
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PHOEBE: passband \"Johnson:V\" has a newer version available.  Run phoebe.list_passband_online_history(\"Johnson:V\") to get a list of available changes and phoebe.update_passband(\"Johnson:V\") or phoebe.update_all_passbands() to update.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -31,7 +39,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2024-09-15T17:02:11.501728Z"
+     "start_time": "2024-09-19T01:43:06.381821Z"
     }
    },
    "cell_type": "code",
@@ -59,7 +67,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:27.373322Z",
+     "end_time": "2024-09-15T17:04:11.244441Z",
      "start_time": "2024-09-15T17:01:27.250986Z"
     }
    },
@@ -88,7 +96,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:27.514938Z",
+     "end_time": "2024-09-15T17:04:11.245816Z",
      "start_time": "2024-09-15T17:01:27.513348Z"
     }
    },
@@ -102,7 +110,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:27.746142Z",
+     "end_time": "2024-09-15T17:04:11.245970Z",
      "start_time": "2024-09-15T17:01:27.652052Z"
     }
    },
@@ -121,7 +129,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:28.540151Z",
+     "end_time": "2024-09-15T17:04:11.246073Z",
      "start_time": "2024-09-15T17:01:27.887496Z"
     }
    },
@@ -144,7 +152,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:28.684442Z",
+     "end_time": "2024-09-15T17:04:11.246182Z",
      "start_time": "2024-09-15T17:01:28.682620Z"
     }
    },
@@ -159,7 +167,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:29.179700Z",
+     "end_time": "2024-09-15T17:04:11.246279Z",
      "start_time": "2024-09-15T17:01:28.829917Z"
     }
    },
@@ -176,7 +184,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:29.329257Z",
+     "end_time": "2024-09-15T17:04:11.246378Z",
      "start_time": "2024-09-15T17:01:29.325602Z"
     }
    },
@@ -200,7 +208,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:29.476252Z",
+     "end_time": "2024-09-15T17:04:11.246488Z",
      "start_time": "2024-09-15T17:01:29.474253Z"
     }
    },
@@ -223,7 +231,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:29.767007Z",
+     "end_time": "2024-09-15T17:04:11.246591Z",
      "start_time": "2024-09-15T17:01:29.764864Z"
     }
    },
@@ -247,7 +255,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:29.810913Z",
+     "end_time": "2024-09-15T17:04:11.246686Z",
      "start_time": "2024-09-15T17:01:29.772338Z"
     }
    },
@@ -268,7 +276,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:29.962948Z",
+     "end_time": "2024-09-15T17:04:11.246800Z",
      "start_time": "2024-09-15T17:01:29.956790Z"
     }
    },
@@ -291,7 +299,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:30.110593Z",
+     "end_time": "2024-09-15T17:04:11.246901Z",
      "start_time": "2024-09-15T17:01:30.108258Z"
     }
    },
@@ -315,7 +323,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:30.759121Z",
+     "end_time": "2024-09-15T17:04:11.247006Z",
      "start_time": "2024-09-15T17:01:30.256451Z"
     }
    },
@@ -334,7 +342,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:31.024245Z",
+     "end_time": "2024-09-15T17:04:11.247095Z",
      "start_time": "2024-09-15T17:01:30.906154Z"
     }
    },
@@ -348,7 +356,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:31.172323Z",
+     "end_time": "2024-09-15T17:04:11.247178Z",
      "start_time": "2024-09-15T17:01:31.170861Z"
     }
    },
@@ -363,7 +371,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:31.390182Z",
+     "end_time": "2024-09-15T17:04:11.247270Z",
      "start_time": "2024-09-15T17:01:31.319569Z"
     }
    },
@@ -375,7 +383,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:31.648646Z",
+     "end_time": "2024-09-15T17:04:11.247346Z",
      "start_time": "2024-09-15T17:01:31.538394Z"
     }
    },
@@ -390,7 +398,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:31.926972Z",
+     "end_time": "2024-09-15T17:04:11.247429Z",
      "start_time": "2024-09-15T17:01:31.854448Z"
     }
    },
@@ -417,7 +425,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:32.203827Z",
+     "end_time": "2024-09-15T17:04:11.247520Z",
      "start_time": "2024-09-15T17:01:32.169300Z"
     }
    },
@@ -444,7 +452,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:32.421416Z",
+     "end_time": "2024-09-15T17:04:11.247613Z",
      "start_time": "2024-09-15T17:01:32.362725Z"
     }
    },
@@ -484,7 +492,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:32.590189Z",
+     "end_time": "2024-09-15T17:04:11.247712Z",
      "start_time": "2024-09-15T17:01:32.579829Z"
     }
    },
@@ -499,7 +507,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:32.782665Z",
+     "end_time": "2024-09-15T17:04:11.247792Z",
      "start_time": "2024-09-15T17:01:32.743986Z"
     }
    },
@@ -536,7 +544,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:32.980368Z",
+     "end_time": "2024-09-15T17:04:11.247875Z",
      "start_time": "2024-09-15T17:01:32.941335Z"
     }
    },
@@ -562,7 +570,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:33.360612Z",
+     "end_time": "2024-09-15T17:04:11.247997Z",
      "start_time": "2024-09-15T16:38:27.476961Z"
     }
    },
@@ -574,7 +582,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:33.360847Z",
+     "end_time": "2024-09-15T17:04:11.248083Z",
      "start_time": "2024-09-15T16:38:27.704196Z"
     }
    },
@@ -614,7 +622,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-15T17:01:33.360987Z",
+     "end_time": "2024-09-15T17:04:11.248180Z",
      "start_time": "2024-09-15T16:40:44.925228Z"
     }
    },
