Update the luminosity tutorial

--- a/tutorial/black_body_solar_luminosity.ipynb
+++ b/tutorial/black_body_solar_luminosity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:11:04.513383Z",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:11:04.818200Z",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:12:48.523506Z",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:12:57.153561Z",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:13:12.967944Z",
@@ -187,21 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-06T00:13:13.216546Z",
-     "start_time": "2024-09-06T00:13:13.214404Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from spice.spectrum.filter import BesselB, BesselI, GaiaG, JohnsonV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:13:13.254915Z",
@@ -210,6 +196,8 @@
    },
    "outputs": [],
    "source": [
+    "from spice.spectrum.filter import BesselB, BesselI, GaiaG, JohnsonV\n",
+    "\n",
     "bessel_b = BesselB()\n",
     "bessel_i = BesselI()\n",
     "gaia_g = GaiaG()\n",
@@ -218,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:13:13.501463Z",
@@ -251,7 +239,7 @@
     "bessel_b.plot_filter_responses_for_wavelengths(vws, observed_flux[:, 0])\n",
     "bessel_i.plot_filter_responses_for_wavelengths(vws, observed_flux[:, 0])\n",
     "gaia_g.plot_filter_responses_for_wavelengths(vws, observed_flux[:, 0])\n",
-    "plt.gca().set_xlim(-10, 30000)"
+    "plt.gca().set_xlim(-10, 30000);"
    ]
   },
   {
@@ -263,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:13:13.517831Z",
@@ -278,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:13:14.283131Z",
@@ -323,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:13:14.408725Z",
@@ -337,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:13:21.751742Z",
@@ -371,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-06T00:14:35.677210Z",
