Docs & tilted spherical harmonics

--- a/tutorial/phoebe_binary.ipynb
+++ b/tutorial/phoebe_binary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-19T01:43:06.338866Z",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-09-19T01:43:06.381821Z"
@@ -68,16 +68,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 57.79it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 54.77it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ParameterSet: 6219 parameters | kinds: lc, mesh, orb>"
+       "<ParameterSet: 6219 parameters | kinds: orb, mesh, lc>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,17 +95,40 @@
     "b.add_dataset('lc', compute_times=times, passband='Johnson:V', dataset='lc01')\n",
     "\n",
     "# Disable limb darkening\n",
-    "b.set_value_all('ld_mode', 'manual')\n",
-    "b.set_value_all('ld_func', 'linear')\n",
-    "b.set_value_all('ld_coeffs', [0.])\n",
-    "b.set_value_all('ld_mode_bol', 'manual')\n",
-    "b.set_value_all('ld_func_bol', 'linear')\n",
-    "b.set_value_all('ld_coeffs_bol', [0.])\n",
-    "b.set_value_all('atm', 'blackbody')\n",
+    "# b.set_value_all('ld_mode', 'manual')\n",
+    "# b.set_value_all('ld_func', 'linear')\n",
+    "# b.set_value_all('ld_coeffs', [0.])\n",
+    "# b.set_value_all('ld_mode_bol', 'manual')\n",
+    "# b.set_value_all('ld_func_bol', 'linear')\n",
+    "# b.set_value_all('ld_coeffs_bol', [0.])\n",
+    "# b.set_value_all('atm', 'blackbody')\n",
     "b.set_value('distance@system', 10*u.pc.to(u.solRad))\n",
     "\n",
     "# Disable irradiation and finite light travel time effects\n",
     "b.run_compute(irrad_method='none', coordinates='uvw', ltte=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PHOEBE bundle has been pickled and saved as 'phoebe_bundle.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Pickle the PHOEBE bundle\n",
+    "with open('phoebe_bundle.pkl', 'wb') as f:\n",
+    "    pickle.dump(b, f)\n",
+    "\n",
+    "print(\"PHOEBE bundle has been pickled and saved as 'phoebe_bundle.pkl'\")\n"
    ]
   },
   {
