--- a/tutorial/phoebe_binary.ipynb
+++ b/tutorial/phoebe_binary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-19T01:43:06.338866Z",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-09-19T01:43:06.381821Z"
@@ -68,16 +68,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:01<00:00, 54.77it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 58.67it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<ParameterSet: 6219 parameters | kinds: orb, mesh, lc>"
+       "<ParameterSet: 6219 parameters | kinds: lc, orb, mesh>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,42 +93,10 @@
     "b.add_dataset('mesh', times=times, columns=COLUMNS, dataset='mesh01')\n",
     "b.add_dataset('orb', compute_times=times, dataset='orb01')\n",
     "b.add_dataset('lc', compute_times=times, passband='Johnson:V', dataset='lc01')\n",
-    "\n",
-    "# Disable limb darkening\n",
-    "# b.set_value_all('ld_mode', 'manual')\n",
-    "# b.set_value_all('ld_func', 'linear')\n",
-    "# b.set_value_all('ld_coeffs', [0.])\n",
-    "# b.set_value_all('ld_mode_bol', 'manual')\n",
-    "# b.set_value_all('ld_func_bol', 'linear')\n",
-    "# b.set_value_all('ld_coeffs_bol', [0.])\n",
-    "# b.set_value_all('atm', 'blackbody')\n",
     "b.set_value('distance@system', 10*u.pc.to(u.solRad))\n",
     "\n",
     "# Disable irradiation and finite light travel time effects\n",
     "b.run_compute(irrad_method='none', coordinates='uvw', ltte=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PHOEBE bundle has been pickled and saved as 'phoebe_bundle.pkl'\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "# Pickle the PHOEBE bundle\n",
-    "with open('phoebe_bundle.pkl', 'wb') as f:\n",
-    "    pickle.dump(b, f)\n",
-    "\n",
-    "print(\"PHOEBE bundle has been pickled and saved as 'phoebe_bundle.pkl'\")\n"
    ]
   },
   {
@@ -142,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-15T17:04:11.245970Z",
@@ -166,14 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-15T17:04:11.246073Z",
      "start_time": "2024-09-15T17:01:27.887496Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'PhoebeModel' object has no attribute 'faces'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mspice\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbinary\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m evaluate_orbit_at_times\n\u001b[0;32m----> 3\u001b[0m pb1, pb2 \u001b[38;5;241m=\u001b[39m evaluate_orbit_at_times(pb, times)\n",
+      "File \u001b[0;32m~/Documents/stellar-mesh-integration/src/spice/models/binary.py:253\u001b[0m, in \u001b[0;36mevaluate_orbit_at_times\u001b[0;34m(binary, times, n_cells)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mevaluate_orbit_at_times\u001b[39m(binary: Binary, times: ArrayLike, n_cells: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[Model, Model]:\n\u001b[1;32m    229\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    230\u001b[0m \u001b[38;5;124;03m    Evaluates the orbit of binary components at multiple specific times.\u001b[39;00m\n\u001b[1;32m    231\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    251\u001b[0m \u001b[38;5;124;03m        compilation features, enabling efficient computation over arrays of times.\u001b[39;00m\n\u001b[1;32m    252\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 253\u001b[0m     grid \u001b[38;5;241m=\u001b[39m Grid\u001b[38;5;241m.\u001b[39mconstruct(binary\u001b[38;5;241m.\u001b[39mbody1, binary\u001b[38;5;241m.\u001b[39mbody2, n_cells)\n\u001b[1;32m    254\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m v_evaluate_orbit(binary, times, grid)\n",
+      "File \u001b[0;32m~/Documents/stellar-mesh-integration/src/spice/models/mesh_view.py:39\u001b[0m, in \u001b[0;36mGrid.construct\u001b[0;34m(cls, m1, m2, n_cells)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconstruct\u001b[39m(\u001b[38;5;28mcls\u001b[39m, m1: MeshModel, m2: MeshModel, n_cells: \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m---> 39\u001b[0m     vs1, vs2 \u001b[38;5;241m=\u001b[39m m1\u001b[38;5;241m.\u001b[39mcast_vertices[m1\u001b[38;5;241m.\u001b[39mfaces\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)], m2\u001b[38;5;241m.\u001b[39mcast_vertices[m2\u001b[38;5;241m.\u001b[39mfaces\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)]\n\u001b[1;32m     40\u001b[0m     vs1, vs2 \u001b[38;5;241m=\u001b[39m vs1[:, :, cast_indexes(vs1)], vs2[:, :, cast_indexes(vs2)]\n\u001b[1;32m     42\u001b[0m     x_range \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39mlinspace(jnp\u001b[38;5;241m.\u001b[39mmin(jnp\u001b[38;5;241m.\u001b[39mconcatenate([vs1[:, :, \u001b[38;5;241m0\u001b[39m], vs2[:, :, \u001b[38;5;241m0\u001b[39m]])),\n\u001b[1;32m     43\u001b[0m                            jnp\u001b[38;5;241m.\u001b[39mmax(jnp\u001b[38;5;241m.\u001b[39mconcatenate([vs1[:, :, \u001b[38;5;241m0\u001b[39m], vs2[:, :, \u001b[38;5;241m0\u001b[39m]])), n_cells)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'PhoebeModel' object has no attribute 'faces'"
+     ]
+    }
+   ],
    "source": [
     "from spice.models.binary import evaluate_orbit_at_times\n",
     "\n",
@@ -191,14 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-15T17:04:11.247006Z",
      "start_time": "2024-09-15T17:01:30.256451Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pb1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m ws \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m900\u001b[39m, \u001b[38;5;241m40000\u001b[39m, \u001b[38;5;241m1000\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m s1s \u001b[38;5;241m=\u001b[39m [simulate_observed_flux(bb\u001b[38;5;241m.\u001b[39mintensity, _pb1, np\u001b[38;5;241m.\u001b[39mlog10(ws), disable_doppler_shift\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m _pb1 \u001b[38;5;129;01min\u001b[39;00m pb1]\n\u001b[1;32m      3\u001b[0m s2s \u001b[38;5;241m=\u001b[39m [simulate_observed_flux(bb\u001b[38;5;241m.\u001b[39mintensity, _pb2, np\u001b[38;5;241m.\u001b[39mlog10(ws), disable_doppler_shift\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m _pb2 \u001b[38;5;129;01min\u001b[39;00m pb2]\n\u001b[1;32m      5\u001b[0m s1s_no_d \u001b[38;5;241m=\u001b[39m [simulate_observed_flux(bb\u001b[38;5;241m.\u001b[39mintensity, _pb1, np\u001b[38;5;241m.\u001b[39mlog10(ws), disable_doppler_shift\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m _pb1 \u001b[38;5;129;01min\u001b[39;00m pb1]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pb1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "ws = np.linspace(900, 40000, 1000)\n",
     "s1s = [simulate_observed_flux(bb.intensity, _pb1, np.log10(ws), disable_doppler_shift=False) for _pb1 in pb1]\n",
