--- a/tutorial/spice_with_korg.ipynb
+++ b/tutorial/spice_with_korg.ipynb
@@ -108,7 +108,28 @@
     }
    ],
    "source": [
-    "A_X"
+    "from spice.spectrum.spectrum_emulator import SpectrumEmulator\n",
+    "from numpy.typing import ArrayLike\n",
+    "\n",
+    "class KorgSpectrumEmulator(SpectrumEmulator):\n",
+    "    def stellar_parameter_names(self) -> ArrayLike:\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def flux(self, log_wavelengths: ArrayLike, parameters: ArrayLike) -> ArrayLike:\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    def intensity(self, log_wavelengths: ArrayLike, mu: float, parameters: ArrayLike) -> ArrayLike:\n",
+    "        \"\"\"Calculate the intensity for given wavelengths and mus\n",
+    "\n",
+    "        Args:\n",
+    "            log_wavelengths (T): [log(angstrom)]\n",
+    "            mu (float): cosine of the angle between the star's radius and the line of sight\n",
+    "            spectral_parameters (T): an array of predefined stellar parameters\n",
+    "\n",
+    "        Returns:\n",
+    "            T: intensities corresponding to passed wavelengths [erg/cm2/s/angstrom]\n",
+    "        \"\"\"\n",
+    "        raise NotImplementedError\n"
    ]
   },
   {
