--- a/tutorial/korg_interpolator_rotation.ipynb
+++ b/tutorial/korg_interpolator_rotation.ipynb
@@ -13,11 +13,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/mjablons/anaconda3/envs/astro/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "PHOEBE: passband \"Bolometric:900-40000\" has a newer version available.  Run phoebe.list_passband_online_history(\"Bolometric:900-40000\") to get a list of available changes and phoebe.update_passband(\"Bolometric:900-40000\") or phoebe.update_all_passbands() to update.\n",
+      "PHOEBE: passband \"Gaia:G\" has a newer version available.  Run phoebe.list_passband_online_history(\"Gaia:G\") to get a list of available changes and phoebe.update_passband(\"Gaia:G\") or phoebe.update_all_passbands() to update.\n",
+      "PHOEBE: passband \"Johnson:V\" has a newer version available.  Run phoebe.list_passband_online_history(\"Johnson:V\") to get a list of available changes and phoebe.update_passband(\"Johnson:V\") or phoebe.update_all_passbands() to update.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'BaseSpectrum' from 'spice.spectrum.spectrum' (/home/100/mj8805/scr/mj8805/miniconda3/envs/astro/lib/python3.12/site-packages/spice/spectrum/spectrum.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minline\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m config\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mspice\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspectrum\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspectrum_korg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KorgSpectrumEmulator\n",
+      "File \u001b[0;32m~/scr/mj8805/miniconda3/envs/astro/lib/python3.12/site-packages/spice/spectrum/spectrum_korg.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspectrum\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseSpectrum\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moverrides\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m override\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Callable, Dict, List, Union\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'BaseSpectrum' from 'spice.spectrum.spectrum' (/home/100/mj8805/scr/mj8805/miniconda3/envs/astro/lib/python3.12/site-packages/spice/spectrum/spectrum.py)"
      ]
     }
    ],
@@ -189,7 +202,7 @@
   "kernelspec": {
    "display_name": "astro",
    "language": "python",
-   "name": "python3"
+   "name": "astro"
   },
   "language_info": {
    "codemirror_mode": {
@@ -201,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
