Some import fixes

--- a/tutorial/black_body_rotation.ipynb
+++ b/tutorial/black_body_rotation.ipynb
@@ -194,8 +194,7 @@
    },
    "outputs": [],
    "source": [
-    "vws = jnp.linspace(100., 12000., 1000)\n",
-    "specs = [simulate_observed_flux(bb.intensity, mt0, jnp.log10(vws)) for mt0 in mts]"
+    "vws = jnp.linspace(100., 12000., plt.plot(*ttt) for mt0 in mts]"
    ]
   },
   {
