--- a/tutorial/synphot.ipynb
+++ b/tutorial/synphot.ipynb
@@ -123,7 +123,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "astro",
    "language": "python",
    "name": "python3"
   },
